--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0"
-  },
-  "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0"
-  }
+	"directories": {
+		"test": "tests"
+	},
+	"scripts": {
+		"test": "mocha test --compilers js:babel-core/register"
+	},
+	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-eslint": "^10.0.1",
+		"babel-preset-env": "^1.7.0",
+		"chai": "^4.2.0",
+		"eslint": "^5.13.0",
+		"mocha": "^5.2.0"
+	}
 }
